--- a/src/assets/css/Normal.css
+++ b/src/assets/css/Normal.css
@@ -5,7 +5,7 @@ body {
 header {
     height: 60px;
     margin-bottom: 10px;
-    box-shadow: 0 1px 4px 0 rgba(0,0,0,.12);
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .12);
 
     width: 1000000px;
     overflow: hidden;
@@ -30,7 +30,7 @@ nav {
 }
 
 article {
-    margin-left:160px;
+    margin-left: 160px;
     width: 710px;
     z-index: 1;
 }
@@ -48,6 +48,7 @@ aside {
     padding: 10px 0px 10px 0px;
     position: fixed;
     left: -590px;
-    margin-left: 50%;
+    /* margin-left: 50%; */
+    /* FIX */
+    margin-left: 45%;
 }
-
